--- a/docs/en/guide/layout-system/circular-dependency.mdx
+++ b/docs/en/guide/layout-system/circular-dependency.mdx
@@ -1,23 +1,23 @@
-# 布局中产生的循环依赖问题
+# Circular Dependencies in Makepad Live DSL Layout System
 
-## 布局循环依赖
+## Understanding Layout Circular Dependencies
 
-布局循环依赖是指在组件布局计算过程中出现的相互依赖关系，导致布局引擎无法确定最终尺寸的情况。这通常发生在以下场景：
+Layout circular dependencies occur when components' size calculations create mutual dependencies, preventing the layout engine from determining final dimensions. This typically happens in these scenarios:
 
-1. 父子组件的尺寸相互依赖
-2. 兄弟组件之间的尺寸相互依赖
-3. 复杂的 Fit 布局嵌套
+1. Parent-child component size interdependencies
+2. Sibling component size interdependencies
+3. Complex Fit layout nesting
 
-让我们通过具体示例来理解这些情况：
+Let's understand these situations through specific examples:
 
-### 父子循环依赖
+### Parent-Child Circular Dependency
 
 ```rust
-// 错误示例：父子循环依赖
+// Incorrect example: Parent-child circular dependency
 ParentView = <View> {
     walk: {
         width: Fill,
-        height: Fit  // 父组件高度依赖子组件
+        height: Fit  // Parent height depends on child
     },
     layout: {
         flow: Down
@@ -26,18 +26,18 @@ ParentView = <View> {
     <ChildView> {
         walk: {
             width: Fill,
-            height: Percentage(0.5)  // 子组件高度依赖父组件
+            height: Percentage(0.5)  // Child height depends on parent
         }
     }
 }
 ```
-在这个例子中：
+In this example:
 
-1. 父组件的高度设置为 `Fit`，需要等待子组件高度计算完成
-2. 子组件高度设置为父组件的 50%，需要等待父组件高度计算完成
-3. 形成循环：父组件等待子组件，子组件等待父组件
+1. Parent component's height is set to `Fit`, waiting for child component height calculation
+2. Child component's height is set to 50% of parent height, waiting for parent height calculation
+3. Creates a cycle: parent waiting for child, child waiting for parent
 
-图示父子循环依赖：
+Parent-child circular dependency diagram
 
 ```plaintext
 ┌─ Parent (height: Fit) ─┐
@@ -50,10 +50,10 @@ ParentView = <View> {
 └────────────────────────┘
 ```
 
-### 兄弟组件循环依赖
+### Sibling Component Circular Dependency
 
 ```rust
-// 错误示例：兄弟组件循环依赖
+// Incorrect example: Sibling component circular dependency
 Container = <View> {
     layout: {
         flow: Right
@@ -61,14 +61,14 @@ Container = <View> {
 
     <LeftView> {
         walk: {
-            width: Fill,  // 左侧组件填充剩余空间
+            width: Fill,  // Left component fills remaining space
             height: Fit
         }
     }
 
     <RightView> {
         walk: {
-            width: Fit,   // 右侧组件宽度自适应
+            width: Fit,   // Right component width adapts to content
             height: Fit
         },
         layout: {
@@ -78,37 +78,36 @@ Container = <View> {
 }
 
 ```
+In this example:
 
-这个例子中：
+1. Left component wants to fill space excluding right component
+2. Right component's width depends on its content
+3. Layout engine cannot determine which component to calculate first
 
-1. 左侧组件想要填充除右侧组件外的空间
-2. 右侧组件的宽度又依赖于其内容
-3. 布局引擎无法确定先计算哪个组件的尺寸
+## How to Avoid Circular Dependencies
 
-## 如何避免布局循环依赖
+### 1. Explicit Size Constraints
 
-### 1. 明确尺寸约束
-
-最安全的方式是为关键尺寸提供明确的约束：
+The safest approach is to provide explicit constraints for critical dimensions:
 
 ```rust
-// 正确示例：明确尺寸约束
+// Correct example: Explicit size constraints
 ParentView = <View> {
     walk: {
         width: Fill,
-        height: Fixed(500)  // 明确父组件高度
+        height: Fixed(500)  // Explicit parent height
     },
 
     <ChildView> {
         walk: {
             width: Fill,
-            height: Percentage(0.5)  // 现在可以正确计算
+            height: Percentage(0.5)  // Now calculatable
         }
     }
 }
 ```
 
-### 2. 使用 Fixed 或 Max/Min 约束
+### 2. Using Fixed or Max/Min Constraints
 
 ```rust
 Container = <View> {
@@ -118,70 +117,70 @@ Container = <View> {
 
     <LeftView> {
         walk: {
-            width: Percentage(0.7),  // 固定比例
+            width: Percentage(0.7),  // Fixed ratio
             height: Fit
         }
     }
 
     <RightView> {
         walk: {
-            width: Fixed(200),  // 固定宽度
+            width: Fixed(200),  // Fixed width
             height: Fit
         }
     }
 }
 ```
 
-### 3. Layout 方向性原则
+### 3. Layout Directional Principles
 
-建立正确的布局方向可以避免许多循环依赖：
+Establishing correct layout direction can avoid many circular dependencies:
 
 ```rust
-// 推荐的布局方向
+// Recommended layout direction
 GoodLayout = <View> {
     layout: {
-        flow: Down  // 垂直布局更容易推导尺寸
+        flow: Down  // Vertical layout makes size calculation more straightforward
     },
 
     <Header> {
         walk: {
             width: Fill,
-            height: Fixed(60)  // 固定高度头部
+            height: Fixed(60)  // Fixed height header
         }
     }
 
     <Content> {
         walk: {
             width: Fill,
-            height: Fill  // 填充剩余空间
+            height: Fill  // Fill remaining space
         }
     }
 
     <Footer> {
         walk: {
             width: Fill,
-            height: Fit  // 底部高度自适应
+            height: Fit  // Footer height adapts to content
         }
     }
 }
 ```
 
-## 当遇到潜在循环依赖时布局引擎的解决策略
+## Layout Engine's Resolution Strategy
 
-当布局引擎检测到潜在的循环依赖时，会采取以下策略：
+When encountering potential circular dependencies, the Makepad layout engine employs these strategies:
 
-### 1. 优先级顺序
+### 1. Priority Order
 
-- Fixed 尺寸最优先计算
-- Fill 其次
-- Fit 最后计算
+- Fixed sizes calculate first
+- Fill calculations second
+- Fit calculations last
 
-### 2. 断开循环
+### 2. Breaking Cycles
 
-- 对于无法解决的循环，使用默认值或最小值
-- 在开发模式下发出警告
+- Uses default or minimum values for unresolvable cycles
+- Issues warnings in development mode
 
-### 3. 缓存机制
+### 3. Caching Mechanism
 
-- 缓存已计算的布局结果
-- 避免重复计算相同的布局
+- Caches calculated layout results
+- Avoids recalculating identical layouts
