--- a/docs/en/guide/layout-system/debug-layout.mdx
+++ b/docs/en/guide/layout-system/debug-layout.mdx
@@ -1,11 +1,13 @@
-# 布局调试
+# Debugging Layout Issues
 
-当怀疑存在布局循环依赖时，您可以使用 `debug` 视图
+When suspecting layout circular dependencies:
 
-- `debug: true` 显示布局边界
+Use debug view:
+
+- `debug: true` Display layout boundaries
 
 ```rust
 MyView = <View> {
-    debug: true,  // 显示布局边界
+    debug: true,  // Display layout boundaries
 }
 ```
