--- a/docs/en/guide/layout-system/attribute-inheritance-relation.mdx
+++ b/docs/en/guide/layout-system/attribute-inheritance-relation.mdx
@@ -1,33 +1,33 @@
-# 属性继承和覆盖机制
+# Layout Property Inheritance Relationships
 
-一个重要的概念是布局属性的继承和覆盖机制
+An important concept is the inheritance and override mechanism for layout properties.
 
-## Walk 属性不继承
+## Walk Properties Do Not Inherit
 
-- 每个组件都需要明确定义自己的 Walk 属性
-- 子组件的 Walk 完全独立于父组件
+- Each component must explicitly define its own Walk properties
+- Child component Walk properties are completely independent of parent components
 
-## Layout 属性部分继承
+## Layout Properties Partially Inherit
 
-- flow 方向会影响子组件的默认行为
-- spacing 会应用于同级子组件之间
-- align 会影响所有子组件的对齐方式
+- `flow` direction influences child components' default behavior
+- `spacing` applies between sibling child components
+- `alignment` affects all child components' positioning
 
 ```rust
-// Layout 属性继承示例
+// Layout property inheritance example
 Parent = <View> {
     layout: {
         flow: Down,
-        align: {x: 0.5} // 所有子组件默认水平居中
+        align: {x: 0.5} // All child components default to horizontal center alignment
     },
 
     <Child1> {
-        // 继承父级的 flow 和 align
+        // Inherits parent's flow and align
     }
 
     <Child2> {
         layout: {
-            align: {x: 1.0} // 覆盖继承的对齐方式，改为右对齐
+            align: {x: 1.0} // Overrides inherited alignment, changes to right alignment
         }
     }
 }
