--- a/docs/en/guide/layout-system/index.mdx
+++ b/docs/en/guide/layout-system/index.mdx
@@ -1,26 +1,28 @@
-# 基本概念
+# Basic Concepts
 
-`Layout` 和 `Walk` 是 Makepad 布局系统中最核心的两个概念，它们共同决定了组件的布局行为。
+`Layout` and `Walk` are the two most fundamental concepts in Makepad's layout system, working together to determine how components are positioned and sized.
 
-- **Walk**: 定义组件自身在父容器中"如何行走"，即如何确定自己的尺寸和位置
-- **Layout**: 定义组件作为容器"如何安排"其子组件的布局方式
+- **Walk**: Defines how a component "walks" within its parent container, determining its own size and position
+- **Layout**: Defines how a component "arranges" its child components when acting as a container
 
-让我们通过一个形象的比喻来理解：
+Let's understand this through an analogy:
 
-- `Walk` 就像是一个人在房间里走动时需要决定自己占据多大空间、站在哪个位置
-- `Layout` 则像是这个人作为房间主人要如何安排客人们的座位
+- Walk is like a person deciding how much space they need and where to stand in a room
+- Layout is like that person, as a room host, deciding how to arrange seating for their guests
 
-这里使用 `Walk` 这个术语，是因为 `Turtle` Draw 是 Makepad 布局系统的核心机制,它的灵感来源于经典的海龟绘图(Turtle Graphics)。这种布局方式允许我们通过一个"海龟"在画布上行走（Walk）来确定组件的位置和尺寸。
+The term `Walk` is used because `Turtle Draw` is the core mechanism of Makepad's layout system, inspired by classic Turtle Graphics. 
 
-## 详细对比
+This layout approach allows us to determine component position and size by having a "turtle" walk across the canvas.
 
-### Walk 属性
+## Detailed Comparison
+
+### Walk Properties
 
 ```rust
 walk: {
-    width: Fill,      // 在父容器中的宽度行为
-    height: Fixed(50), // 在父容器中的高度行为
-    margin: {         // 与其他组件的间距
+    width: Fill,      // Width behavior in parent container
+    height: Fixed(50), // Height behavior in parent container
+    margin: {         // Spacing from other components
         left: 10,
         right: 10,
         top: 5,
@@ -28,63 +30,63 @@ walk: {
     }
 }
 ```
-`Walk` 的关键特点：
+Key characteristics of `Walk`:
 
-1. 面向外部 - 决定组件在父容器中如何定位
-2. 被动计算 - 尺寸由父容器和自身属性共同决定
-3. 边距控制 - 通过 margin 与其他组件保持距离
+1. Externally oriented - Determines how the component positions itself within its parent
+2. Passive calculation - Size is determined jointly by parent container and own properties
+3. Margin control - Maintains spacing from other components through margins
 
-### Layout 属性
+### Layout Properties
 
 ```rust
 layout: {
-    flow: Down,       // 子组件排列方向
-    spacing: 10,      // 子组件之间的间距
-    padding: {        // 内部留白
+    flow: Down,       // Child component arrangement direction
+    spacing: 10,      // Spacing between child components
+    padding: {        // Internal spacing
         left: 10,
         right: 10,
         top: 5,
         bottom: 5
     },
-    align: {          // 子组件对齐方式
-        x: 0.5,       // 水平居中
-        y: 0.0        // 顶部对齐
+    align: {          // Child component alignment
+        x: 0.5,       // Horizontal center
+        y: 0.0        // Top alignment
     }
 }
 ```
 
-Layout 的关键特点：
+Key characteristics of `Layout`:
 
-1. 面向内部 - 决定如何管理子组件
-2. 主动布局 - 直接控制子组件的排列
-3. 内部空间 - 通过 padding 控制内容区域
+1. Internally oriented - Determines how to manage child components
+2. Active layout - Directly controls child component arrangement
+3. Internal space - Controls content area through padding
 
-## 协同工作机制
+## Collaborative Working Mechanism
 
-让我们通过一个实例来看它们是如何协同工作的：
+Let's examine how they work together through an example:
 
 ```rust
 Container = <View> {
-    // 决定容器自身在父级中的表现
+    // Determines container's behavior in parent
     walk: {
-        width: Fill,        // 填充父容器宽度
-        height: Fit,        // 高度适应内容
-        margin: 10         // 四周留出10px间距
+        width: Fill,        // Fill parent container width
+        height: Fit,        // Height adapts to content
+        margin: 10         // 10px margin on all sides
     },
 
-    // 决定如何排列其子组件
+    // Determines how to arrange child components
     layout: {
-        flow: Down,        // 子组件垂直排列
-        spacing: 5,        // 子组件间距5px
-        padding: 15,       // 内部留白15px
-        align: {x: 0.5}    // 子组件水平居中
+        flow: Down,        // Vertical arrangement of children
+        spacing: 5,        // 5px spacing between children
+        padding: 15,       // 15px internal padding
+        align: {x: 0.5}    // Horizontally center children
     },
 
-    // 子组件
+    // Child components
     <Button> {
         walk: {
-            width: Fixed(100),  // 固定宽度100px
-            height: Fixed(40)   // 固定高度40px
+            width: Fixed(100),  // Fixed 100px width
+            height: Fixed(40)   // Fixed 40px height
         }
     }
 
@@ -97,20 +99,20 @@ Container = <View> {
 }
 ```
 
-布局计算过程：
+Layout calculation process:
 
-1. Container 的 Walk 确定自己在父容器中占据填充宽度，高度自适应
-2. Container 的 Layout 决定子组件垂直排列、居中对齐
-3. 每个 Button 的 Walk 确定自己是 100x40 的固定大小
-4. 最终 Container 的高度被计算为：
+1. Container's Walk determines its own Fill width and Fit height within parent
+2. Container's Layout decides children will be vertically arranged and centered
+3. Each Button's Walk determines its own fixed 100x40 size
+4. Finally, Container's height is calculated as:
     - padding.top (15px)
-    - Button1 高度 (40px)
+    - Button1 height (40px)
     - spacing (5px)
-    - Button2 高度 (40px)
+    - Button2 height (40px)
     - padding.bottom (15px)
-    - 总计：115px
+    - Total: 115px
 
-图示说明布局计算过程
+Diagram illustrating layout calculation process
 
 ```plaintext
 ┌─── Container(Fill × Fit) ───┐
@@ -125,6 +127,6 @@ Container = <View> {
 │    └───────────────────┘    │
 └─────────────────────────────┘
     ↑     ↑          ↑      ↑
- margin  对齐       flow   margin
+ margin  align       flow   margin
 
 ```
