update: finish animation system english section documents

--- a/docs/en/guide/animation-system/building-basic-animation-component.mdx
+++ b/docs/en/guide/animation-system/building-basic-animation-component.mdx
@@ -1,51 +1,53 @@
-# 构建一个基本的动画组件
+# Building Basic Animation Component
 
-## 基础结构设计
+## Basic Structure Design
+
+Let's first look at how to build a basic animation component:
 
 ```rust
-// 1. 首先声明组件结构
+// 1. First declare the component structure
 #[derive(Live, Widget)]
 pub struct TypingAnimation {
-    #[deref] view: View,          // 基础视图组件
-    #[animator] animator: Animator,  // 动画控制器
+    #[deref] view: View,          // Base view component
+    #[animator] animator: Animator,  // Animation controller
 
-    // 动画参数
+    // Animation parameters
     #[live(0.65)] animation_duration: f64,
     #[live(10.0)] swing_amplitude: f64,
     #[live(3.0)] swing_base: f64,
 
-    // 运行时状态
+    // Runtime state
     #[rust] next_frame: Option<NextFrame>,
     #[rust] animation_start_time: f64,
     #[rust] is_animating: bool,
 }
 ```
 
-这个结构为我们的动画组件提供了必要的基础设施。
+This structure provides the necessary infrastructure for our animation component.
 
-## 动画状态定义
+## Animation State Definition
 
-在 Makepad 中，我们使用 `live_design!` 宏来声明动画状态：
+In Makepad, we use the live_design! macro to declare animation states:
 
 ```rust
 live_design! {
     TypingAnimation = {{TypingAnimation}} {
-        // 基础属性配置
+        // Basic property configuration
         width: Fit,
         height: Fit,
 
-        // 动画状态定义
+        // Animation state definition
         animator: {
-	        // 动画状态组
+            // Animation state group
             circle1 = {
-                default: down,  // 默认状态
-                down = {       // 向下移动状态
+                default: down,  // Default state
+                down = {       // Down movement state
                     redraw: true,
                     from: {all: Forward {duration: 0.325}}
                     ease: InOutQuad
                     apply: {content = { circle1 = { margin: {top: 10.0} }}}
                 }
-                up = {        // 向上移动状态
+                up = {        // Up movement state
                     redraw: true,
                     from: {all: Forward {duration: 0.325}}
                     ease: InOutQuad
@@ -57,55 +59,55 @@ live_design! {
 }
 ```
 
-在 Makepad 的 Live DSL 中，`animator` 是一个特殊的属性，用于定义组件的动画状态和行为。让我们深入了解它的语法和结构。
+In Makepad's Live DSL, animator is a special property used to define component animation states and behaviors. Let's dive deep into its syntax and structure.
 
-- 动画状态组是一个命名空间，用于组织相关的动画状态。一个状态组就是一个动画轨道（track）。所以当你想要对同一个对象的不同属性进行动画时，需要为每个动画属性创建独立的 track。
+- Animation state groups serve as namespaces for organizing related animation states. A state group is effectively an animation track (track). When you want to animate different properties of the same object simultaneously, you need to create separate tracks for each animated property.
 
 ```rust
 animator: {
-    circle1_position = {  // 位置的 track
+    circle1_position = {  // Position track
         default: down,
-        down = { /* 控制位置的动画状态 */ }
+        down = { /* Control position animation states */ }
     }
-    circle1_opacity = {   // 透明度的 track
+    circle1_opacity = {   // Opacity track
         default: visible,
-        hidden = { /* 控制透明度的动画状态 */ }
+        hidden = { /* Control opacity animation states */ }
     }
 }
 ```
 
-- 每个状态包含三个主要部分。
-    - **from** - 定义动画的时间特性
-    - **ease** - 定义动画的缓动函数
-    - **apply** - 定义状态的最终属性值
+- Each state contains three main parts:
+    - **from** - Defines animation timing characteristics
+    - **ease** - Defines animation easing function
+    - **apply** - Defines final property values for the state
 
 ```rust
 // from
 from: {
-    all: Forward {duration: 0.2}      // 正向播放一次
-    all: Reverse {                    // 反向播放一次
+    all: Forward {duration: 0.2}      // Play forward once
+    all: Reverse {                    // Play in reverse once
         duration: 0.2,
         end: 1.0
     }
-    all: Loop {                       // 循环播放
+    all: Loop {                       // Loop playback
         duration: 0.2,
         end: 1.0
     }
-    all: BounceLoop {                 // 来回循环播放
+    all: BounceLoop {                 // Loop back and forth
         duration: 0.2,
         end: 1.0
     }
-    all: Snap                         // 瞬间切换，无动画
+    all: Snap                         // Instant switch, no animation
 }
 // ease
-// - `OutQuad`/`OutCubic`: 适用于自然运动
-// - `InOutQuad`: 适用于可逆动画
-// - `Linear`: 适用于旋转等持续动画
-ease: Linear          // 线性
-ease: InQuad          // 二次方加速
-ease: OutQuad         // 二次方减速
-ease: InOutQuad       // 二次方加速减速
-ease: Bezier {        // 贝塞尔曲线
+// - `OutQuad`/`OutCubic`: Suitable for natural motion
+// - `InOutQuad`: Suitable for reversible animations
+// - `Linear`: Suitable for continuous animations like rotation
+ease: Linear          // Linear
+ease: InQuad          // Quadratic acceleration
+ease: OutQuad         // Quadratic deceleration
+ease: InOutQuad       // Quadratic ease-in-out
+ease: Bezier {        // Bezier curve
     cp0: 0.0,
     cp1: 0.0,
     cp2: 1.0,
@@ -120,16 +122,16 @@ apply: {
     position: vec2(100.0, 0.0)
 }
 ```
-## 实现动画逻辑
+## Implementing Animation Logic
 
-动画的核心在于状态管理和帧更新：
+The core of animation lies in state management and frame updates:
 
 ```rust
 impl Widget for TypingAnimation {
     fn handle_event(&mut self, cx: &mut Cx, event: &Event, scope: &mut Scope) {
         match event {
             Event::NextFrame(ne) => {
-                // 处理动画帧更新
+                // Handle animation frame updates
                 if let Some(next_frame) = self.next_frame {
                     if ne.set.contains(&next_frame) {
                         self.update_animation(cx, ne.time);
@@ -137,72 +139,71 @@ impl Widget for TypingAnimation {
                     }
                 }
             }
-            // ... 其他事件处理
+            // ... Other event handling
         }
     }
 }
 ```
 
-> 注意： Makepad 中实现动画要基于 NextFrame ，而非 Timer。因为 Timer 依赖于底层 OS API ，有跨平台的风险。
+> Note: In Makepad, animations should be based on NextFrame, not Timer. This is because Timer relies on underlying OS APIs, which poses cross-platform risks.
 
-在代码中触发动画的方法：
+Methods to trigger animations in code:
 
 ```rust
-// 瞬间切换状态
+// Instant state switch
 self.animator_cut(cx, &[id!(hover), id!(on)]);
 
-// 播放动画过渡到状态
+// Animate transition to state
 self.animator_play(cx, &[id!(hover), id!(on)]);
 
-// 根据条件切换状态
+// Toggle state based on condition
 self.animator_toggle(
     cx,
-    is_hovered,                    // 条件
-    Animate::Yes,                  // 是否需要动画
-    &[id!(hover), id!(on)],       // 条件为真时的状态
-    &[id!(hover), id!(off)]       // 条件为假时的状态
+    is_hovered,                    // Condition
+    Animate::Yes,                  // Whether animation is needed
+    &[id!(hover), id!(on)],       // State when condition is true
+    &[id!(hover), id!(off)]       // State when condition is false
 );
 ```
 
-处理动画事件：
+Handling animation events:
 
 ```rust
-
 fn handle_event(&mut self, cx: &mut Cx, event: &Event) {
-    // 处理动画系统事件
+    // Handle animation system events
     if self.animator_handle_event(cx, event).must_redraw() {
-        // 动画需要重绘
+        // Animation needs redraw
         self.redraw(cx);
     }
 
-    // 检查动画状态
+    // Check animation state
     if self.animator_in_state(cx, &[id!(hover), id!(on)]) {
-        // 当前处于悬停状态
+        // Currently in hover state
     }
 }
 ```
 
-## 动画控制接口
+## Animation Control Interface
 
-为动画组件提供控制接口是良好实践：
+It's good practice to provide control interfaces for animation components:
 
 ```rust
 impl TypingAnimationRef {
-    // 启动动画
+    // Start animation
     pub fn start(&self, cx: &mut Cx) {
         if let Some(mut inner) = self.borrow_mut() {
             inner.start(cx);
         }
     }
 
-    // 停止动画
+    // Stop animation
     pub fn stop(&self, cx: &mut Cx) {
         if let Some(mut inner) = self.borrow_mut() {
             inner.stop(cx);
         }
     }
 
-    // 配置动画参数
+    // Configure animation parameters
     pub fn set_animation_speed(&self, cx: &mut Cx, duration: f64) {
         if let Some(mut inner) = self.borrow_mut() {
             inner.animation_duration = duration;
