--- a/docs/en/guide/animation-system/debug-animation.mdx
+++ b/docs/en/guide/animation-system/debug-animation.mdx
@@ -1,7 +1,7 @@
-# 调试技巧
+# Debugging Animation
 
-开发动画时的一些有用调试技巧：
+Some useful debugging techniques when developing animations:
 
-1. 使用 `log!` 输出关键时间点和状态
-2. 设置较长的动画时间来观察过渡效果
+1. Use `log!` to output key timestamps and states
+2. Set longer animation durations to observe transition effects
 
