--- a/docs/en/guide/animation-system/example-animation.mdx
+++ b/docs/en/guide/animation-system/example-animation.mdx
@@ -1,4 +1,4 @@
-# 完整动画实例
+# Complete Animation Example
 
 ```rust
 use makepad_widgets::*;
@@ -27,10 +27,10 @@ live_design! {
         width: Fit,
         height: Fit,
 
-        // 添加可配置的动画参数
-        swing_amplitude: (DEFAULT_SWING_TOP), // 小球摆动的最大高度
-        swing_base: (DEFAULT_SWING_BOTTOM),   // 小球摆动的基础高度
-        animation_duration: (ANIMATION_DURATION), // 动画周期
+        // Add configurable animation parameters
+        swing_amplitude: (DEFAULT_SWING_TOP), // Maximum height of ball swing
+        swing_base: (DEFAULT_SWING_BOTTOM),   // Base height of ball swing 
+        animation_duration: (ANIMATION_DURATION), // Animation cycle
 
         flow: Down,
         align: {x: 0.0, y: 0.5},
@@ -102,20 +102,19 @@ pub struct TypingAnimation {
     #[animator] animator: Animator,
 
     #[live(0.65)] animation_duration: f64,
-    #[live(10.0)] swing_amplitude: f64,  // 摆动幅度
-    #[live(3.0)] swing_base: f64,       // 基础高度
+    #[live(10.0)] swing_amplitude: f64,  
+    #[live(3.0)] swing_base: f64,     
 
     #[rust] next_frame: Option<NextFrame>,
     #[rust] animation_start_time: f64,
     #[rust] current_animated_dot: CurrentAnimatedDot,
 
-    #[rust] initialized: bool, // 添加初始化标志
-    #[rust] is_animating: bool, // 添加动画状态标志
+    #[rust] initialized: bool, 
+    #[rust] is_animating: bool, 
 }
 
 impl LiveHook for TypingAnimation {
     fn after_apply(&mut self, cx: &mut Cx, apply: &mut Apply, index: usize, nodes: &[LiveNode]) {
-        // 在组件完全应用后初始化
         if !self.initialized {
             self.initialized = true;
         }
@@ -141,26 +140,23 @@ impl CurrentAnimatedDot {
 
 impl Widget for TypingAnimation {
     fn handle_event(&mut self, cx: &mut Cx, event: &Event, scope: &mut Scope) {
-        // 先检查初始化
         if self.initialized && !self.is_animating {
             self.init(cx);
         }
 
         match event {
             Event::NextFrame(ne) => {
-                // 检查是否是我们的 next_frame
                 if let Some(next_frame) = self.next_frame {
                     if ne.set.contains(&next_frame) {
                         let elapsed = ne.time - self.animation_start_time;
                         if elapsed >= self.animation_duration * 0.5 {
-                            // 更新动画
                             self.update_animation(cx, ne.time);
                         }
-                        // 继续请求下一帧
+                        // Continue to request the next frame
                         self.next_frame = Some(cx.new_next_frame());
                     }
                 } else if self.initialized && !self.is_animating {
-                    // 如果组件已初始化但没有动画，重新开始动画
+                    //  If the component is initialized but has no animation, restart the animation
                     self.animation_start_time = ne.time;
                     self.next_frame = Some(cx.new_next_frame());
                     self.update_animation(cx, ne.time);
@@ -192,7 +188,6 @@ impl TypingAnimation {
         self.next_frame = Some(cx.new_next_frame());
 
         if let Some(state) = &mut self.animator.state {
-            // 设置初始状态
             state.push_live(live!{
                 state: {
                     content: {
@@ -204,9 +199,8 @@ impl TypingAnimation {
             });
         }
 
-        // 立即开始第一个动画
         self.update_animation(cx, self.animation_start_time);
-        self.is_animating = true; // 设为 true,表示动画已经开始
+        self.is_animating = true; 
     }
 
     fn reset_animation(&mut self, cx: &mut Cx) {
@@ -221,7 +215,6 @@ impl TypingAnimation {
 
         match self.current_animated_dot {
             CurrentAnimatedDot::Dot1 => {
-                // 构建状态节点
                 let mut up_nodes = LiveNodeVec::new();
                 up_nodes.push_live(live_object!{
                     content: {
@@ -240,7 +233,6 @@ impl TypingAnimation {
                     }
                 });
 
-                // 更新动画状态
                 if let Some(state) = &mut self.animator.state {
                     state.replace_or_insert_last_node_by_path(
                         0,
@@ -334,13 +326,10 @@ impl TypingAnimation {
     }
 
     pub fn start(&mut self, cx: &mut Cx) {
-        // 如果动画没在运行，就启动它
         if !self.is_animating {
-            self.initialized = true;     // 确保初始化状态
-            self.is_animating = false;   // 临时设为 false，这样 handle_event 会重新启动动画
-            self.reset_animation(cx);    // 重置动画状态
-
-            // 强制立即开始一次动画循环
+            self.initialized = true;   
+            self.is_animating = false;  
+            self.reset_animation(cx);  
             self.animation_start_time = cx.seconds_since_app_start();
             self.next_frame = Some(cx.new_next_frame());
             self.update_animation(cx, self.animation_start_time);
@@ -349,10 +338,9 @@ impl TypingAnimation {
 
     pub fn stop(&mut self, cx: &mut Cx) {
         if self.is_animating {
-            self.is_animating = false;   // 停止动画循环
-            self.next_frame = None;      // 移除下一帧的请求
+            self.is_animating = false;  
+            self.next_frame = None;    
 
-            // 将所有点重置到基础位置
             if let Some(state) = &mut self.animator.state {
                 state.push_live(live!{
                     state: {
@@ -364,27 +352,27 @@ impl TypingAnimation {
                     }
                 });
             }
-            self.redraw(cx);  // 强制重绘以更新视觉状态
+            self.redraw(cx); 
         }
     }
 
 }
 
 
-/// // 设置小幅度快速摆动
-/// typing_animation.set_swing_parameters(cx, 5.0, 2.0); // 小幅度
-/// typing_animation.set_animation_speed(cx, 0.3); // 更快的速度
+
+/// typing_animation.set_swing_parameters(cx, 5.0, 2.0); 
+/// typing_animation.set_animation_speed(cx, 0.3); 
 ///
-/// // 设置大幅度慢速摆动
-/// typing_animation.set_swing_parameters(cx, 15.0, 3.0); // 大幅度
-/// typing_animation.set_animation_speed(cx, 1.0); // 更慢的速度
+/// 
+/// typing_animation.set_swing_parameters(cx, 15.0, 3.0); 
+/// typing_animation.set_animation_speed(cx, 1.0); 
 impl TypingAnimationRef {
-    // 提供设置动画参数的方法
+
     pub fn set_swing_parameters(&self, cx: &mut Cx, amplitude: f64, base: f64) {
         if let Some(mut inner) = self.borrow_mut() {
             inner.swing_amplitude = amplitude;
             inner.swing_base = base;
-            // 如果动画正在进行，需要重新应用参数
+
             if inner.next_frame.is_some() {
                 let time = cx.seconds_since_app_start();
                 inner.update_animation(cx, time);
@@ -395,7 +383,7 @@ impl TypingAnimationRef {
     pub fn set_animation_speed(&self, cx: &mut Cx, duration: f64) {
         if let Some(mut inner) = self.borrow_mut() {
             inner.animation_duration = duration;
-            // 如果动画正在进行，需要重新应用参数
+
             if inner.next_frame.is_some() {
                 let time = cx.seconds_since_app_start();
                 inner.update_animation(cx, time);
@@ -419,7 +407,7 @@ impl TypingAnimationRef {
 }
 ```
 
-## 使用方法
+## Usage：
 
 ```rust
 let typing_animation = self.view.typing_animation(id!(typing_animation));
