--- a/docs/en/guide/animation-system/index.mdx
+++ b/docs/en/guide/animation-system/index.mdx
@@ -1,52 +1,52 @@
-# 概述及关键概念
+# Concepts
 
-##  动画系统概述
+## Animation System Overview
 
-Makepad 的动画系统是一个声明式的动画框架，它通过状态(State)和过渡(Transition)的概念来管理 UI 动画。
+Makepad's animation system is a declarative animation framework that manages UI animations through the concepts of States and Transitions.
 
-让我们通过一个「正在输入」动画组件来深入理解整个系统。
+Let's gain a deeper understanding of the entire system through a "typing" animation component.
 
-## 关键概念
+## Key Concepts
 
-让我们先看 `Animator` 的核心数据结构：
+Let's first look at the Animator's core data structure:
 
 ```rust
 pub struct Animator {
-    // 是否忽略找不到的动画状态
+    // Whether to ignore missing animation states
     pub ignore_missing: bool,
-    // 指向 Live DSL 中动画定义的引用
+    // Reference to animation definition in Live DSL
     pub live_ptr: LiveRef,
-    // 当前动画状态数据
+    // Current animation state data
     pub state: Option<Vec<LiveNode>>,
-    // 下一帧的调度器
+    // Next frame scheduler
     pub next_frame: NextFrame,
 }
 ```
 
-这个结构看起来很简单，但它实际上是一个非常精巧的设计：
+This structure appears simple but is actually a very elegant design:
 
-1. `live_ptr` - 保存了指向 Live DSL 中动画定义的引用，使得 Animator 可以在需要时查找和加载动画状态定义
-2. `state` - 存储当前正在执行的动画状态，包括所有正在进行的插值计算
-3. `next_frame` - 用于调度下一帧动画的渲染
+1. `live_ptr` - Maintains reference to animation definition in Live DSL, allowing Animator to lookup and load animation state definitions when needed
+2. `state` - Stores currently executing animation state, including all ongoing interpolation calculations
+3. `next_frame` - Used for scheduling the next animation frame render
 
-### 动画状态管理
+### Animation State Management
 
-这个系统的工作方式是基于状态转换的：
+This system works based on state transitions:
 
-1. 每个状态由一对 LiveId 标识符来标识(`[LiveId; 2]`)
-2. 状态之间的转换通过两个主要方法处理：
-    - `animate_to()`: 平滑过渡到新状态
-    - `cut_to()`: 直接切换到新状态
+1. Each state is identified by a pair of LiveId identifiers (`[LiveId; 2]`)
+2. State transitions are handled through two main methods:
+    - `animate_to()`: Smooth transition to new state
+    - `cut_to()`: Direct switch to new state
 
 ```rust
 impl Animator {
-    // 硬切换到指定状态
+    // Hard switch to specified state
     pub fn cut_to(&mut self, cx: &mut Cx, state_pair: &[LiveId; 2], index: usize, nodes: &[LiveNode]) {
-        // 获取当前状态或创建新状态
+        // Get current state or create new state
         let mut state = self.swap_out_state().unwrap_or(Vec::new());
         let track = state_pair[0];
 
-        // 初始化状态结构
+        // Initialize state structure
         if state.len() == 0 {
             state.push_live(live!{
                 tracks: {},
@@ -54,28 +54,28 @@ impl Animator {
             });
         }
 
-        // 更新轨道状态
+        // Update track state
         state.replace_or_insert_last_node_by_path(0, &[live_id!(tracks).as_field(), track.as_field()],
             live_object!{
                 [track]: {state_id: (state_pair[1]), ended: 1}
             }
         );
 
-        // 应用状态值
+        // Apply state values
         let mut path = Vec::new();
         path.push(live_id!(state).as_field());
 
-        // ... 读取和应用状态值的代码 ...
+        // ... Code for reading and applying state values ...
 
         self.swap_in_state(state);
     }
 
-    // 动画过渡到指定状态
+    // Animate transition to specified state
     pub fn animate_to(&mut self, cx: &mut Cx, state_pair: &[LiveId; 2], index: usize, nodes: &[LiveNode]) {
-        // 类似 cut_to，但会创建插值动画
+        // Similar to cut_to, but creates interpolation animation
         let mut state = self.swap_out_state().unwrap_or(Vec::new());
 
-        // ... 设置动画轨道
+        // ... Set up animation track
         state.replace_or_insert_last_node_by_path(0, &[live_id!(tracks).as_field(), track.as_field()],
             live_object!{
                 [track]: {
@@ -86,32 +86,32 @@ impl Animator {
             }
         );
 
-        // ... 创建插值动画
+        // ... Create interpolation animation
 
         self.swap_in_state(state);
         self.next_frame = cx.new_next_frame();
     }
 }
 ```
-### 动画更新机制的关键代码结构
+### Key Animation Update Mechanism Code Structure
 
 ```rust
 impl Animator {
     pub fn handle_event(&mut self, cx: &mut Cx, event: &Event) -> AnimatorAction {
         if let Event::NextFrame(nf) = event {
-            // 检查是否是我们的下一帧
+            // Check if it's our next frame
             if !nf.set.contains(&self.next_frame) {
                 return AnimatorAction::None
             }
 
-            // 更新所有活跃的动画轨道
+            // Update all active animation tracks
             let state_nodes = self.state.as_mut().unwrap();
             let mut ended = true;
             let mut redraw = false;
 
-            // ... 遍历并更新所有动画轨道
+            // ... Iterate and update all animation tracks
 
-            // 如果还有动画在运行，继续请求下一帧
+            // If animations are still running, request next frame
             if !ended {
                 self.next_frame = cx.new_next_frame();
             }
@@ -123,7 +123,7 @@ impl Animator {
 }
 ```
 
-### 关键帧插值计算
+### Keyframe Interpolation Calculation
 
 ```rust
 impl Animator {
@@ -133,25 +133,25 @@ impl Animator {
         nodes: &mut [LiveNode],
         ext_time: f64
     ) -> (bool, bool) {
-        // 提取关键帧
+        // Extract keyframes
         let mut prev_kf: Option<KeyFrame> = None;
 
-        // 计算当前时间点的插值
+        // Calculate interpolation at current time point
         for key_frame in key_frames {
             if time >= prev_kf.time && time <= key_frame.time {
                 let normalized_time = (time - prev_kf.time) /
                     (key_frame.time - prev_kf.time);
 
-                // 应用缓动函数
+                // Apply easing function
                 let mix = key_frame.ease.map(normalized_time);
 
-                // 根据值类型进行插值
+                // Interpolate based on value type
                 let new_val = match (prev_kf.value, key_frame.value) {
-                    // 数值插值
+                    // Numeric interpolation
                     (LiveValue::Float64(a), LiveValue::Float64(b)) => {
                         LiveValue::Float64((b - a) * mix + a)
                     },
-                    // 颜色插值
+                    // Color interpolation
                     (LiveValue::Color(a), LiveValue::Color(b)) => {
                         LiveValue::Color(Vec4::from_lerp(
                             Vec4::from_u32(a),
@@ -159,10 +159,10 @@ impl Animator {
                             mix as f32
                         ).to_u32())
                     },
-                    // ... 其他类型插值
+                    // ... Other type interpolations
                 };
 
-                // 更新当前值
+                // Update current value
                 nodes[last_child_index].value = new_val;
                 return (ended, redraw)
             }
@@ -171,6 +171,6 @@ impl Animator {
 }
 ```
 
-### 动画轨道（track）系统
+### Animation track (track) system
 
-动画轨道系统允许多个属性独立动画
+The animation track (track) system allows for multiple properties to animate independently.
